--- a/style.css
+++ b/style.css
@@ -1,15 +1,107 @@
+@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap');
 
-.card 1 {
-  background-color: hsl(31, 77%, 52%);
+@import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&display=swap');
 
+.content{
+  font-size: 15px;
+  display: flex;
+  margin: auto;
+  margin-top: 7%;
+  width: 63%;
 }
 
+@media (max-width:375px) {
+  .content {
+    flex-direction: column;
+    margin: auto;
+    margin-top: 20%;
+    margin-bottom: 20%;
+    width: 90%;
+  }
+}
 
-.card 2 {
+#card {
+  padding: 2.5em;
+}
+
+@media(max-width:375px){
+  #card{
+    height: 60%;
+  }
+}
+
+.sedan{
+  background-color: hsl(31, 77%, 52%);
+  border-radius: 0.5em 0em 0em 0.5em ;
+/*  border-bottom-left-radius: 0.5em;*/
+}
+
+@media (max-width:375px) {
+  .sedan{
+      border-radius: 0.5em 0.5em 0em 0em ;
+  }
+}
+
+.suv{
   background-color: hsl(184, 100%, 22%);
 
 }
 
-.card 3 {
-  background-color: hsl(179, 100%, 13%:
+.luxury{
+  background-color: hsl(179, 100%, 13%);
+    border-radius: 0em 0.5em 0.5em 0em;
 }
+
+@media (max-width:375px) {
+  .luxury{
+      border-radius: 0em 0em 0.5em 0.5em;
+  }
+}
+
+h1 {
+  color: hsl(0, 0%, 95%);
+  font-family: 'Big Shoulders Display', cursive;
+}
+
+p{
+  color: hsla(0, 0%, 100%, 0.75);
+  font-family: "Lexend Deca",sans-serif;
+  font-weight: 400;
+  line-height: 1.6;
+  margin-top: 10%;
+}
+
+button {
+  background-color: hsl(0, 0%, 95%);
+  border-radius: 1.5em;
+  border: none;
+  mix-blend-mode: screen;
+  margin-top: 25%;
+  margin-bottom: 20%;
+  text-align: center;
+  font-size: 15px;
+  width: 60%;
+  height: 10%;
+}
+@media (max-width:375px) {
+  button {
+    margin-top: 25%;
+    margin-bottom: 20%;
+    height: 3em;
+  }
+}
+
+
+@media (max-width:375px) {
+  button{
+    margin-top: 10%;
+    margin-bottom: 10%;
+  }
+}
+
+/*.card 1{
+  background-color: orange;
+}
+
+
+*/
